--- a/zotero.bib
+++ b/zotero.bib
@@ -154,3 +154,49 @@
 	keywords = {Drug design, Machine learning, Structure-activity relationships},
 	file = {ScienceDirect Full Text PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/8TARSUSR/Dietterich et al. - 1997 - Solving the multiple instance problem with axis-pa.pdf:application/pdf;ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/PSIMP84K/S0004370296000343.html:text/html}
 }
+
+@article{amores_multiple_2013,
+	title = {Multiple instance classification: Review, taxonomy and comparative study},
+	volume = {201},
+	issn = {0004-3702},
+	url = {http://www.sciencedirect.com/science/article/pii/S0004370213000581},
+	doi = {10.1016/j.artint.2013.06.003},
+	shorttitle = {Multiple instance classification},
+	abstract = {Multiple Instance Learning ({MIL}) has become an important topic in the pattern recognition community, and many solutions to this problem have been proposed until now. Despite this fact, there is a lack of comparative studies that shed light into the characteristics and behavior of the different methods. In this work we provide such an analysis focused on the classification task (i.e., leaving out other learning tasks such as regression). In order to perform our study, we implemented fourteen methods grouped into three different families. We analyze the performance of the approaches across a variety of well-known databases, and we also study their behavior in synthetic scenarios in order to highlight their characteristics. As a result of this analysis, we conclude that methods that extract global bag-level information show a clearly superior performance in general. In this sense, the analysis permits us to understand why some types of methods are more successful than others, and it permits us to establish guidelines in the design of new {MIL} methods.},
+	pages = {81--105},
+	journaltitle = {Artificial Intelligence},
+	shortjournal = {Artificial Intelligence},
+	author = {Amores, Jaume},
+	urldate = {2017-05-31},
+	date = {2013-08},
+	keywords = {Bag-of-Words, Codebook, Multi-instance learning},
+	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ATXBMISH/S0004370213000581.html:text/html}
+}
+
+@article{foulds_review_2010,
+	title = {A review of multi-instance learning assumptions},
+	volume = {25},
+	issn = {1469-8005, 0269-8889},
+	url = {https://www.cambridge.org/core/journals/knowledge-engineering-review/article/review-of-multiinstance-learning-assumptions/0915098C83BF119A377015A45952247A},
+	doi = {10.1017/S026988890999035X},
+	abstract = {{AbstractMulti}-instance ({MI}) learning is a variant of inductive machine learning, where each learning example contains a bag of instances instead of a single feature vector. The term commonly refers to the supervised setting, where each bag is associated with a label. This type of representation is a natural fit for a number of real-world learning scenarios, including drug activity prediction and image classification, hence many {MI} learning algorithms have been proposed. Any {MI} learning method must relate instances to bag-level class labels, but many types of relationships between instances and class labels are possible. Although all early work in {MI} learning assumes a specific {MI} concept class known to be appropriate for a drug activity prediction domain; this ‘standard {MI} assumption’ is not guaranteed to hold in other domains. Much of the recent work in {MI} learning has concentrated on a relaxed view of the {MI} problem, where the standard {MI} assumption is dropped, and alternative assumptions are considered instead. However, often it is not clearly stated what particular assumption is used and how it relates to other assumptions that have been proposed. In this paper, we aim to clarify the use of alternative {MI} assumptions by reviewing the work done in this area.},
+	pages = {1--25},
+	number = {1},
+	journaltitle = {The Knowledge Engineering Review},
+	author = {Foulds, James and Frank, Eibe},
+	urldate = {2017-05-31},
+	date = {2010-03},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/JK8HXZKR/0915098C83BF119A377015A45952247A.html:text/html}
+}
+
+@report{berners-lee_uniform_1994,
+	title = {Uniform Resource Locators ({URL})},
+	url = {https://www.ietf.org/rfc/rfc1738.txt},
+	pages = {1--25},
+	number = {1738},
+	institution = {{CERN}},
+	author = {Berners-Lee, Tim and Masinter, Larry and {McCahill}, Mark P.},
+	urldate = {2017-06-05},
+	date = {1994-12},
+	file = {:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GMQHMWSH/rfc1738.txt:text/plain}
+}
