--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,7 @@
 \addbibresource{zotero.bib}
 
 \newcommand{\BPspace}{\mathcal}
+\newcommand{\BPfield}{\mathbb}
 \newcommand{\BPvec}{\vec}
 
 \usepackage{todonotes}
