--- a/images/model/model.tex
+++ b/images/model/model.tex
@@ -50,8 +50,8 @@
 	\draw[decoration={brace,mirror,raise=5pt},decorate] (1.2, -5.45) -- ++(0, 3.95);
 	\draw[->] (1.6, -3.475) -- node[above] {\tiny \( \phi_2 \)} ++ (0.4, 0);
 	\draw (2.2, -3.3) rectangle ++(2, -0.35) node[pos=0.5] {\tiny \( u_1 \dots u_n \)};
-	\draw[->] (4.3, -3.475) -- ++ (0.4, 0);
-	\draw (4.9, -3.475) node[anchor=north,fill=white] {\dots};
+	\draw[->] (4.3, -3.475) -- node[above] {\tiny \( f \)} ++ (0.4, 0);
+	\draw (4.9, -3.25) node[anchor=north,fill=white] {\( y \)};
 \end{tikzpicture}
 
 \end{document}
