--- a/preamble.tex
+++ b/preamble.tex
@@ -19,6 +19,8 @@
 \setcounter{secnumdepth}{3}
 \addbibresource{zotero.bib}
 
+\newtheorem{define}{Definice}
+
 \newcommand{\BPspace}{\mathcal}
 \newcommand{\BPfield}{\mathbb}
 \newcommand{\BPvec}{\vec}
