Added basic structure

--- a/BP.tex
+++ b/BP.tex
@@ -39,18 +39,23 @@
 
 \tableofcontents
 
-%\input{introduction.tex}
+\input{introduction.tex}
 
 \pagestyle{headings}
 
+\input{problem.tex}
 \input{MIL.tex}
 \input{model.tex}
+\input{implementation.tex}
+\input{evaluation.tex}
+\input{results.tex}
 
 \pagestyle{plain}
 
-%\input{conclusion.tex}
+\input{conclusion.tex}
 
 %\nocite{*}
+\todo{Zkontrolovat overflow}
 \printbibliography[title=Literatura]
 
 \end{document}
