--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Text úvodu....
+Co je to za problém, proč ho řeším, jaký je přístup k řešení
