--- a/model.tex
+++ b/model.tex
@@ -1,5 +1,11 @@
 \chapter{Použitý model}
 
+Jak vypadá.
+
+Jak souvisí s MIL, jak se liší.
+
+Hledání funkce \( \phi \) - neuronové sítě. Použité vrstvy. ADAM (možná i shrnutí jiných metod - SGD, ADAMax...)
+
 \begin{figure}
 	\caption{Části adresy URL}\label{url_parts}
 	\centering
