--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,6 @@
 \chapter*{Závěr}
 \addcontentsline{toc}{chapter}{Závěr}
 
-Text závěru....
+Co se podařilo (i nepodařilo).
+
+Kam dál? (Syntetické gradienty, noisyReLU, flow \& user modely).
