--- a/preamble.tex
+++ b/preamble.tex
@@ -11,6 +11,8 @@
 \usepackage{url}
 \usepackage[backend=biber,style=iso-authoryear,sortlocale=cs_CZ,autolang=other,bibencoding=UTF8]{biblatex}
 \usepackage{setspace}
+\usepackage{hyperref}
+\usepackage[ocgcolorlinks]{ocgx2}[2017/03/30]
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
@@ -18,6 +20,15 @@
 \setmainfont{TeX Gyre Termes}
 \setcounter{secnumdepth}{3}
 \addbibresource{zotero.bib}
+\hypersetup{
+	colorlinks,
+	pdfencoding=auto,
+	unicode=true,
+	citecolor=green,
+	filecolor=blue,
+	linkcolor=red,
+	urlcolor=blue
+}
 
 \newtheorem{define}{Definice}
 
