Added full open bookmarks on start

--- a/preamble.tex
+++ b/preamble.tex
@@ -12,7 +12,7 @@
 \usepackage[backend=biber,style=iso-authoryear,sortlocale=cs_CZ,autolang=other,bibencoding=UTF8]{biblatex}
 \usepackage{setspace}
 \usepackage{hyperref}
-\usepackage[ocgcolorlinks]{ocgx2}[2017/03/30]
+\usepackage[ocgcolorlinks]{ocgx2}
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
@@ -24,6 +24,8 @@
 	colorlinks,
 	pdfencoding=auto,
 	unicode=true,
+	bookmarksopen=true,
+	bookmarksopenlevel=3,
 	citecolor=green,
 	filecolor=blue,
 	linkcolor=red,
